--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,8 @@ dependencies {
 	compile group: "com.google.gwt", name: "gwt-servlet", version: "2.5.0"
 	compile group: "com.google.gwt", name: "gwt-user", version: "2.5.0"
 	compile group: "org.codehaus.groovy", name: "groovy-all", version: "2.3.9"
-	compile group: "com.amazonaws", name: "aws-java-sdk", version: "1.9.6"
+	compile group: "com.amazonaws", name: "aws-java-sdk-s3", version: "1.9.30"
+	compile group: "org.codehaus.groovy.modules.http-builder", name: "http-builder", version: "0.7.1"
 	compile "com.intellij:annotations:132.839-PATCH1"
 	compile "com.google.guava:guava-gwt:16.+"
 	compile "com.google.gwt.inject:gin:1.5.0"
