Fixed  Create Configuration page shows EC2 Configurations #20

--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ test {
     systemProperties['COMMANDER_USER'] = props.getProperty("COMMANDER_USER")
     systemProperties['COMMANDER_PASSWORD'] = props.getProperty("COMMANDER_PASSWORD")
     systemProperties['PLUGIN_VERSION'] = version
-    //TODO: load properties for EC-EC2
+    //TODO: load properties for EC-S3
 
 
  testLogging {
