--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ buildscript {
 		jcenter()
 	}
 	dependencies {
-		classpath group: 'com.electriccloud.plugins', name: 'flow-gradle-plugin', version: '+'
+        classpath group: 'com.electriccloud.plugins', name: 'flow-gradle-plugin', version: '+'
+        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
 	}
 }
 
@@ -25,9 +26,12 @@ description = "Plugins : EC-S3"
 version = "1.0.0"
 
 apply plugin: 'flow-gradle-plugin'
+apply plugin: 'license'
 
-
-
+license {
+    header = file ('shortHeader.txt')
+    exclude "**/project.xml"
+}
 dependencies {
     testCompile 'junit:junit:[4,)'
     testCompile 'org.mockito:mockito-core:1.9.5'
