Fixes to make tests run

--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,10 @@
 // Copyright (c) 2015 Electric Cloud, Inc.
 // All rights reserved
 
-configurations{
-    testRuntime.exclude group: 'com.google.gwt'
+configurations {
+ testRuntime {
+   exclude module: 'gwt-dev'
+ }
 }
 
 
@@ -38,15 +40,14 @@ license {
 }
 dependencies {
     testCompile 'junit:junit:[4,)'
-    testCompile 'org.mockito:mockito-core:1.9.5'
-    testCompile 'com.amazonaws:aws-java-sdk-s3:1.9.30'
-    testCompile "org.apache.httpcomponents:httpcore:4.4.4"
-    testCompile "org.apache.httpcomponents:httpclient:4.3.6"
-    testCompile "commons-codec:commons-codec:1.10"
+    compile 'com.amazonaws:aws-java-sdk-s3:+'
+
 
 }
 
 test {
+    classpath = sourceSets.test.runtimeClasspath
+
     Properties props = new Properties()
 
     def propFileName = "ecplugin.properties"
