--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,8 @@
 
 buildscript {
     repositories {
-        mavenLocal()
         mavenCentral()
-        maven {
-            url 'https://nexus-internal.cloudbees.com/content/repositories/snapshots'
-            credentials {
-                username = System.getenv('NEXUS_USERNAME') ?: nexusUsername
-                password = System.getenv('NEXUS_PASSWORD') ?: nexusPassword
-            }
-        }
+        mavenLocal()
         maven {
             url 'https://nexus-internal.cloudbees.com/content/groups/mirror'
             credentials {
@@ -33,7 +26,21 @@ buildscript {
 
 repositories {
     mavenCentral()
-    // maven { url 'https://repo.cloudbees.com/content/repositories/dev-connect' }
+    mavenLocal()
+    maven {
+        url 'https://nexus-internal.cloudbees.com/content/repositories/snapshots'
+        credentials {
+            username = System.getenv('NEXUS_USERNAME') ?: nexusUsername
+            password = System.getenv('NEXUS_PASSWORD') ?: nexusPassword
+        }
+    }
+    maven {
+        url 'https://nexus-internal.cloudbees.com/service/local/staging/deploy/maven2'
+        credentials {
+            username = System.getenv('NEXUS_USERNAME') ?: nexusUsername
+            password = System.getenv('NEXUS_PASSWORD') ?: nexusPassword
+        }
+    }
     maven {
         url 'https://nexus-internal.cloudbees.com/content/groups/mirror'
         credentials {
@@ -45,11 +52,18 @@ repositories {
 
 configurations.all {
     resolutionStrategy {
+        force group: 'com.electriccloud', name: 'ec-test', version: '10.1.0'
         force group: 'com.electriccloud', name: 'commander-client', version: '10.1.0'
         force group: 'com.electriccloud', name: 'commander-sdk', version: '6.1.2.1'
         force group: 'com.electriccloud', name: 'ec_internal', version: '6.1.2.1'
         force group: 'com.google.gwt', name: 'gwt-user', version: '2.5.0-ec3'
         force group: 'com.google.gwt', name: 'gwt-dev', version: '2.5.0-ec1'
+
+        // force group: 'com.electriccloud', name: 'commander-client', version: '10.1.0'
+        // force group: 'com.electriccloud', name: 'commander-sdk', version: '6.1.2.1'
+        // force group: 'com.electriccloud', name: 'ec_internal', version: '6.1.2.1'
+        // force group: 'com.google.gwt', name: 'gwt-user', version: '2.5.0-ec3'
+        // force group: 'com.google.gwt', name: 'gwt-dev', version: '2.5.0-ec1'
 
         cacheChangingModulesFor 0, 'seconds'
     }
@@ -60,12 +74,6 @@ description = "Plugins : EC-S3"
 version = "1.1.3"
 
 apply plugin: 'flow-gradle-plugin'
-apply plugin: 'license'
-
-license {
-    header = file ('shortHeader.txt')
-    exclude "**/project.xml"
-}
 
 dependencies {
     testCompile 'junit:junit:[4,)'
@@ -98,4 +106,6 @@ test {
  }
 }
 
-task wrapper(type: Wrapper) { gradleVersion = '2.13' }
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.13'
+}
