--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,12 @@ description = "Plugins : EC-S3"
 version = "1.1.3"
 
 apply plugin: 'flow-gradle-plugin'
+apply plugin: 'license'
+
+license {
+    header = file ('shortHeader.txt')
+    exclude "**/project.xml"
+}
 
 dependencies {
     testCompile 'junit:junit:[4,)'
